# level4-scripts

./: README.md  Vagrantfile  quic-test.py
data/: filter.py  mquictt_binary_quinn.txt  mquictt_binary_quinn_breakdown.txt  plot.py  quic-test-09102021.pcapng  quiche_src_size  rumqtt_base_filtered  rustls_binary.txt  rustls_binary_breakdown.txt
data/binary_sizes/: ngtcp2_client_bin  ngtcp2_server_bin  quiche_client_bin  quiche_server_bin  quinn_client_bin  quinn_server_bin
data/mqtt/: mqtt_example_message.txt  results_comm_time.csv  results_comm_time_farm.csv  results_comm_time_home.csv  results_comm_time_synth.csv  results_connection_time.csv  results_connection_time_farm.csv  results_connection_time_home.csv  results_connection_time_synth.csv  rumqtt_base_dump
data/mqtt/mquictt_results/: results_connection_time.csv
data/mqtt/rumqtt_base_filtered/: results.csv  results_comm_time.csv  results_connection_time.csv
data/mqtt/rumqtt_base_filtered/iot_home/: 3g  4g  ethernet  wifi  zigbee
data/mqtt/rumqtt_base_filtered/printer_farm/: 3g  4g  ethernet  wifi  zigbee
data/mqtt/rumqtt_base_filtered/synth/: 3g  4g  ethernet  wifi  zigbee
data/mqtt/rumqtt_base_raw/iot_home/: 3g  4g  ethernet  wifi  zigbee
data/mqtt/rumqtt_base_raw/printer_farm/: 3g  4g  ethernet  wifi  zigbee
data/mqtt/rumqtt_base_raw/synth/: 3g  4g  ethernet  wifi  zigbee
mesh_topo/: mesh.py
mqtt/: mqtt-mininet.py  vscp.sh
mqtt/broker/: .gitignore  Cargo.toml
mqtt/broker/src/: genpem.sh  main.rs
mqtt/broker/src/config/: rumqttd.conf
mqtt/client/: .gitignore  Cargo.toml
mqtt/client/src/: main.rs
mqtt/rumqtt_base/broker/: Cargo.toml
mqtt/rumqtt_base/broker/src/: main.rs  rumqttd.conf
mqtt/rumqtt_base/client/: Cargo.toml  key.der
mqtt/rumqtt_base/client/src/: main.rs
quic/: quic-mininet.py
quic/quiche/client/: Cargo.toml
quic/quiche/client/src/: main.rs
quic/quiche/server/: Cargo.toml
quic/quiche/server/src/: main.rs
quic/quinn/client/: Cargo.toml
quic/quinn/client/src/: main.rs
quic/quinn/server/: Cargo.toml
quic/quinn/server/src/: main.rs
socket/client/: Cargo.toml  cert.der
socket/client/src/: main.rs
socket/server/: Cargo.toml  cert.der
socket/server/src/: cert.pem  key.pem  main.rs
