[package]
name = "broker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
rumqttd = {git = "https://github.com/Apolexian/rumqtt", rev="a8bc98ee2c8839e35f6c97100928d5427c3d6fe1"}
confy = "0.4.0"