[package]
name = "broker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
rumqttd = {git = "https://github.com/Apolexian/rumqtt", rev="67e188230cb5c330a3318437ddd5ec79a86149fc"}
confy = "0.4.0"