[package]
name = "client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = {git = "https://github.com/Apolexian/rumqtt", rev="b8fe4f8365aa2bf12373736ef1e618361c760819"}
pretty_env_logger = "0.4.0"