[package]
edition = "2018"
name = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
quic-socket = "0.7.6"
rumqttc = {git = "https://github.com/Apolexian/rumqtt", rev = "85b4f9bb819ce150a6090c3d6c0c9748dadf6bef"}
tokio = {version = "1.15.0", features = ["full"]}
