[package]
edition = "2018"
name = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
quic-socket = {git = "https://github.com/Apolexian/QuicSocket", rev = "7f55c10050c2476bcb6fe06c02396b4104bb7acf"}
rumqttc = {git = "https://github.com/Apolexian/rumqtt", rev = "67e188230cb5c330a3318437ddd5ec79a86149fc"}
tokio = {version = "1.15.0", features = ["full"]}
