[package]
edition = "2021"
name = "client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quic-socket = {git = "https://github.com/Apolexian/QuicSocket", rev = "53310c2cd7d048cebe7ff139cba31fc2e9389470"}
tokio = {version = "1.12.0", features = ["full"]}
