[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quic-socket = {git = "https://github.com/Apolexian/QuicSocket", rev = "ae838ac2a792ac4b6f2d4c79f01071f7511a3feb"}
tokio = {version = "1.12.0", features = ["full"]}
rcgen = "0.8.14"