[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quic-socket = {git = "https://github.com/Apolexian/QuicSocket", rev = "568c1dd82185aa21ab050d9de4502de7c9f2ed9c"}
tokio = {version = "1.12.0", features = ["full"]}
rcgen = "0.8.14"