[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quiche = "0.10.0"
ring = "0.16.20"
mio = {version = "0.7.0", features=["net", "os-poll"]}
log = { version = "0.4", features = ["std"] }
lazy_static = "1"
qlog = "0.5.0"