[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
rustls = "0.20.2"
quinn = "0.8.0"
structopt = "0.3.25"
tracing = "0.1.10"
tracing-futures = "0.2.5"
futures-util = "0.3.19"
url = "2.2.2"
tokio = { version = "1.0.1", features = ["full"] }
directories-next = "2.0.0"
rcgen = "0.8.14"