[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
futures-util = "0.3.19"
tracing = "0.1.10"
tracing-futures = "0.2.5"
structopt = "0.3.25"
quinn = "0.8.0"
tracing-subscriber = "0.3.3"
tokio = { version = "1.0.1", features = ["full"] }
rustls = "0.20.2"
directories-next = "2.0.0"
rustls-pemfile = "0.2.1"
rcgen = "0.8.14"